<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="50"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/linearMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/message"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signaturePad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:penColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/clear"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/save"
            android:textSize="12sp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>
</LinearLayout>